# ffui

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  ffmpeg.rs  lib.rs  main.rs  models.rs  presets.rs  state.rs  storage.rs
src/components/: InspectorPanel.tsx  PreviewPanel.tsx  ProgressPanel.tsx  QueuePanel.tsx  SectionCard.tsx  TopBar.tsx
src/lib/: format.ts  tauri.ts
